crates/cash-parser/src/snapshots/cash_parser__word__tests__parse_command_sub_with_unbalanced_single_quote.snap
---
source: cash-parser/src/word.rs
expression: "test_parse(\"\\\"$(cat <<'EOF'\\nit's here\\nEOF\\n)\\\"\")?"
---
ParseTestResults(
  input: "\"$(cat <<\'EOF\'\nit\'s here\nEOF\n)\"",
  result: [
    WordPieceWithSource(
      piece: DoubleQuotedSequence([
        WordPieceWithSource(
          piece: CommandSubstitution("cat <<\'EOF\'\nit\'s here\nEOF\n"),
          start_index: 1,
          end_index: 30,
        ),
      ]),
      start_index: 0,
      end_index: 31,
    ),
  ],
)
