crates/cash-parser/src/snapshots/cash_parser__word__tests__parse_command_substitution.snap
---
source: cash-parser/src/word.rs
expression: "test_parse(\"$(echo hi)\")?"
---
ParseTestResults(
  input: "$(echo hi)",
  result: [
    WordPieceWithSource(
      piece: CommandSubstitution("echo hi"),
      start_index: 0,
      end_index: 10,
    ),
  ],
)
