crates/cash-parser/src/snapshots/cash_parser__word__tests__parse_command_substitution_with_embedded_extglob.snap
---
source: cash-parser/src/word.rs
expression: "test_parse(\"$(echo !(x))\")?"
---
ParseTestResults(
  input: "$(echo !(x))",
  result: [
    WordPieceWithSource(
      piece: CommandSubstitution("echo !(x)"),
      start_index: 0,
      end_index: 12,
    ),
  ],
)
