crates/cash-parser/src/snapshots/cash_parser__word__tests__parse_command_substitution_with_embedded_quotes.snap
---
source: cash-parser/src/word.rs
expression: "test_parse(r#\"$(echo \"hi\")\"#)?"
---
ParseTestResults(
  input: "$(echo \"hi\")",
  result: [
    WordPieceWithSource(
      piece: CommandSubstitution("echo \"hi\""),
      start_index: 0,
      end_index: 12,
    ),
  ],
)
